| Summary: | ASTERISK-25033: Asterisk 13 (branch head) won't compile without PJSip | ||
| Reporter: | Peter Whisker (whiskerp) | Labels: | |
| Date Opened: | 2015-04-29 08:16:44 | Date Closed: | 2015-05-03 09:20:34 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip |
| Versions: | SVN 13.4.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Build from scratch on Debian (jessie) | Attachments: | |
| Description: | Recently, it has become impossible to build without PJSip headers.
I do not use the PJSip channel and do not select it in make menuconfig (it has xxx in any case) however the build fails on a PJSip dependency even though I do not want PJSip. The workaround is to download and make install PJSip but why??? There is clearly a missing conditional. res_pjsip_dlg_options.c:30:19: fatal error: pjsip.h: No such file or directory Peter | ||
| Comments: | By: Rusty Newton (rnewton) 2015-04-29 17:47:13.392-0500 Can you try with a fresh clone of the git repo (we are no longer using SVN)? https://wiki.asterisk.org/wiki/display/AST/Gerrit+Usage#GerritUsage-CloningfromGerrit If you want to grab 13 "git clone -b 13 http://gerrit.asterisk.org/asterisk" By: Corey Farrell (coreyfarrell) 2015-05-02 02:13:47.919-0500 I can confirm this issue. There is an extra space in before "MODULEINFO", causing the section to be ignored. I'll get a review posted to fix this shortly. By: Peter Whisker (whiskerp) 2015-05-02 02:22:46.690-0500 Sorry. I had pulled from GIT. It should not say SVN. It's Git 13 head I was using. Glad to see the confirmation. By: Corey Farrell (coreyfarrell) 2015-05-02 02:24:31.405-0500 Posted for review: 13: https://gerrit.asterisk.org/334 master: https://gerrit.asterisk.org/335 | ||